# sdl2-cpp-template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh
dev/: install.sh
include/: utils.h
src/: CMakeLists.txt  main.cpp
